--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Data Science Summer School 2025
+title: Data Science Summer School 2026
 author:
-  email: exchange.engineering@zhaw.ch
+  email: international.engineering@zhaw.ch
 description: A collaboration between the ZHAW School of Engineering and the Grand Valley State University GVSU, USA
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
